--- a/home.html
+++ b/home.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
   <title>j3hl0's Hub | Home</title>
+  <link rel="icon" type="image/x-icon" href="/images/logo.jpg">
 </html>
