--- a/home.html
+++ b/home.html
@@ -2,4 +2,7 @@
 <html>
   <title>j3hl0's Hub | Home</title>
   <link rel="icon" type="image/x-icon" href="/images/logo.jpg">
+  
+  <head>Home Page</head>
+  
 </html>
