--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>j3hl0's Hub | Home</title>
-  <link rel="icon" type="image/x-icon" href="/images/logo.jpg">
+  <link rel="icon" type="image/jpg" href="/images/logo.jpg">
   
   <head>Home Page</head>
   
