--- a/home.html
+++ b/home.html
@@ -3,6 +3,6 @@
   <title>j3hl0's Hub | Home</title>
   <link rel="icon" type="image/jpg" href="logo.jpg">
   
-  <head>Home Page</head>
+  <h1>Home Page</h1>
   
 </html>
