--- a/home.html
+++ b/home.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <title>j3hl0's Hub | Home</title>
-  <link rel="icon" type="image/jpg" href="logo.jpg">
-  
-  <h1 style="text-align:center; font-family:arial; background-color:lightgrey;"> Welcome to j3hl0's Hub! </h1>
+  <head>
+    <title>j3hl0's Hub | Home</title>
+    <link rel="icon" type="image/jpg" href="logo.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  </head>
+
+  <h1 style="text-align:center; font-family:arial;"> Welcome to j3hl0's Hub! </h1>
+
+  <footer style="text-align:center; font-family: 'Courier New', Courier, monospace;">This site is a work in progress.</footer>
   
 </html>
